<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioVideoUsingMediaPlayer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <string name="sdcard_audio">Play Audio from located at device </string>
    <string name="res_audio">Play Audio from Resources file </string>
    <string name="http_audio">Stream Audio</string>
     <string name="sdcard_video">Play Video from located at device </string>
	<string name="res_video">Play Video from Resources file</string>
    <string name="http_video">Stream Video</string>
    

</resources>
